--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="large_text">25sp</dimen>
     <dimen name="normal_text">18sp</dimen>
+    <dimen name="margin_large">12sp</dimen>
 </resources>
