--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple_700">
@@ -61,6 +62,28 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
+
+    <Switch
+        android:id="@+id/service_switch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        android:layout_marginTop="@dimen/margin_large"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+    <TextView
+        android:id="@+id/service_switch_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="service is off"
+        android:textColor="@color/white"
+        android:textSize="@dimen/normal_text"
+        app:layout_constraintBottom_toBottomOf="@+id/service_switch"
+        app:layout_constraintEnd_toStartOf="@+id/service_switch"
+        android:layout_marginEnd="@dimen/margin_large"
+        app:layout_constraintTop_toTopOf="@+id/service_switch" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
